--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fontsource/inter": "^5.0.18",
+    "@material-ui/icons": "^4.11.3",
     "@mui/joy": "^5.0.0-beta.36",
+    "@mui/material": "^5.15.20",
     "@reduxjs/toolkit": "^2.2.5",
     "install": "^0.13.0",
     "next": "14.2.4",
