--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "ateneo-tuition",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@fontsource/inter": "^5.0.18",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/joy": "^5.0.0-beta.36",
-    "@mui/material": "^5.15.20",
-    "@reduxjs/toolkit": "^2.2.5",
-    "install": "^0.13.0",
-    "next": "14.2.4",
-    "npm": "^10.8.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
-  },
-  "devDependencies": {
-    "eslint": "^8",
-    "eslint-config-next": "14.2.4"
-  }
+    "name": "ateneo-tuition",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@fontsource/inter": "^5.0.18",
+        "@mui/icons-material": "^5.15.20",
+        "@mui/joy": "^5.0.0-beta.36",
+        "@mui/material": "^5.15.20",
+        "@reduxjs/toolkit": "^2.2.5",
+        "install": "^0.13.0",
+        "next": "14.2.4",
+        "npm": "^10.8.1",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-redux": "^9.1.2",
+        "redux": "^5.0.1"
+    },
+    "devDependencies": {
+        "eslint": "^8",
+        "eslint-config-next": "14.2.4"
+    }
 }
